--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "devDependencies": {
     "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
+    "postcss": "^8.4.39",
+    "postcss-cli": "^11.0.0",
     "tailwindcss": "^3.4.4"
   },
   "scripts": {
-    "build": "postcss static/css/tailwind.css -o static/css/styles.css",
-    "watch": "postcss static/css/tailwind.css -o static/css/styles.css --watch",
+    "build": "npx postcss static/css/tailwind.css -o static/css/styles.css",
+    "watch": "npx postcss static/css/tailwind.css -o static/css/styles.css --watch",
     "dev": "concurrently \"python manage.py runserver\" \"npm run watch\""
   }
 }
